tests/errors/illegal_shadowing.tau
x := 3;
struct Foo{
    #paste("static x:= 4;");
    #if(x == 4) paste("foo:=3;");
}
public func main() -> int{
    return 0;
}
